+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 2.6.4rc1?
==============================

*Release date: 07-Oct-2009*

Core and Builtins
-----------------

- Issue #7019: Raise ValueError when unmarshalling bad long data, instead
  of producing internally inconsistent Python longs.

Library
-------

- Issue #7120: logging: Removed import of multiprocessing which is causing
  crash in GAE.

- Issue #7115: Fixed the extension module builds that is failing when using
  paths in the extension name instead of dotted names.

- Issue #7068: Fixed the partial renaming that occured in r72594.

- Issue #7064: Fixed the incompatibility with Setuptools in distutils
  when running the build_ext command.

- Issue #7052: Removed nonexisting NullHandler from logging.__all__.

- Issue #7039: Fixed distutils.tests.test_sysconfig when running on
  installation with no build.

Tests
-----

- Issue #7042: Fix test_signal (test_itimer_virtual) failure on OS X 10.6.


What's New in Python 2.6.3
==========================

*Release date: 02-Oct-2009*

What's New in Python 2.6.3rc1
=============================

*Release date: 29-Sep-2009*

Core and Builtins
-----------------

- Issue #5329: Fix os.popen* regression from 2.5 with commands as a
  sequence running through the shell.  Patch by Jean-Paul Calderone
  and Jani Hakala.

- Issue #6990: Fix threading.local subclasses leaving old state around
  after a reference cycle GC which could be recycled by new locals.

- Issue #6922: Fix an infinite loop when trying to decode an invalid
  UTF-32 stream with a non-raising error handler like "replace" or "ignore".

- Issue #1590864: Fix potential deadlock when mixing threads and fork().

- Issue #6844: Do not emit DeprecationWarnings when accessing a "message"
  attribute on exceptions that was set explicitly.

- Issue #6846: Fix bug where bytearray.pop() returns negative integers.
